# srt

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/config/: celery.py  settings.py  urls.py
backend/reservations/: admin.py  models.py  serializers.py  slack.py  srt_service.py  tasks.py  urls.py  views.py
backend/reservations/migrations/: 0001_initial.py  0002_alter_reservationjob_status.py  0003_reservationjob_retry_interval_ms_and_more.py  0004_authtoken_reservationjob_user_id.py  0005_backfill_user_id.py  0006_reservationjob_slack_user_id.py  0007_userpref.py  0008_remove_reservationjob_slack_user_id.py  0009_reservationjob_dep_time_alter_reservationjob_time.py  0010_authtoken_srt_pw.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/app/: api.ts  app.css  entry.server.tsx  root.tsx
frontend/app/components/ui/: badge.tsx  input.tsx  select.tsx
frontend/app/routes/: home.tsx
