[project]
name = "srt-auto-reserve-backend"
version = "0.1.0"
description = "SRT 자동 예약 백엔드 (Django + DRF + Celery)"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "celery>=5.4",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "gunicorn>=22.0",
    "SRTrain>=2.6.7",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
